# wechat-passcode-login

./: .env.example  .gitignore  README.md  pyproject.toml
src/: auth_store.py  config.py  crypto.py  main.py  models.py  session_store.py
static/: index.html
