[project]
name = "wechat-passcode-login"
version = "0.1.0"
description = "WeChat MP scan + passcode login server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.1",
    "pycryptodome>=3.21.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6.0",
]
